2012-06-12  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_message_expunged_cb),
	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed),
	(lbm_msgno_filt_check_idle_cb),
	(libbalsa_mailbox_msgno_filt_check): update message number if a
	message is expunged.

2012-06-11  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check_idle_cb): unref the
	LibBalsaMailboxSearchIter.

2012-06-11  Peter Bloomfield

	* libbalsa/imap-server.c: remove redundant parentheses.

2012-06-11  Peter Bloomfield

	Ref count LibBalsaMailboxSearchIter

	* libbalsa/mailbox.c (libbalsa_mailbox_run_filters_on_reception),
	(libbalsa_mailbox_msgno_filt_check),
	(libbalsa_mailbox_search_iter_new),
	(libbalsa_mailbox_search_iter_ref),
	(libbalsa_mailbox_search_iter_unref),
	(libbalsa_mailbox_messages_change_flags): ref count
	LibBalsaMailboxSearchIter, and unref it instead of free.
	* libbalsa/mailbox.h: new member ref_count.
	* libbalsa/mailbox_local.c (lbm_local_update_view_filter): unref
	LibBalsaMailboxSearchIter instead of free.
	* src/balsa-index.c (bndx_destroy),
	(bndx_select_next_with_flag): ditto.
	* src/filter-run-callbacks.c (run_filters_on_mailbox): ditto.
	* src/main-window.c: ditto.

2012-06-10  Peter Bloomfield

	* libbalsa/libbalsa.c (libbalsa_scanner_error_quark),
	(libbalsa_mailbox_error_quark), (libbalsa_image_error_quark):
	GQuarks for GError.
	* libbalsa/libbalsa.h: export them.

2012-06-10  Peter Bloomfield

	* libbalsa/imap/pop3.c (pop_imap_error_quark): a GQuark for use
	in g_set_error.
	* libbalsa/imap/pop3.h: export it.

2012-06-09  Peter Bloomfield

	* libbalsa/mailbox.h: do not export
	libbalsa_mailbox_msgno_filt_{in,out}.
	* libbalsa/mailbox.c: declare them static.

2012-06-09  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check),
	(lbm_msgno_filt_check_idle_cb),
	(libbalsa_mailbox_msgno_filt_check): check whether message
	matches current view filter in an idle callback instead of in
	subthread.

2012-06-08  Peter Bloomfield
