@@ -1,3 +1,8 @@
+2012-06-13  Peter Bloomfield
+
+	* src/balsa-app.c (find_url_idle_cb): lock mutex before
+	signalling cond.
+
 2012-06-12  Peter Bloomfield
 
 	* libbalsa/mailbox.c (lbm_message_expunged_cb),
